# Kockasfulu-mk2

./: CMakeLists.txt  README.md
include/: CMakeLists.txt
src/: CMakeLists.txt  evaluate.cpp  evaluate.hpp  globals.cpp  globals.hpp  main.cpp  seach.cpp  search.hpp  uci.cpp  uci.hpp  utils.hpp
